# LingoTimeKeeper

./: CMakeLists.txt  Main.qml  README.md  initialcheck.cpp  initialcheck.h  main.cpp  main_hi.ts
